utils: 使用 getLast() 获取集合最后一个值